--- a/WebAssets/ts/tsconfig.json
+++ b/WebAssets/ts/tsconfig.json
@@ -4,16 +4,12 @@
     ],
     "compilerOptions": {
         "target": "ESNext",
+        "moduleResolution": "node",
         "noEmit": true,
         "noImplicitAny": true,
         "strict": true,
         "importsNotUsedAsValues": "error",
         "allowSyntheticDefaultImports": true,
-        "noErrorTruncation": true,
-        "types": [
-            "codemirror",
-            "codemirror-addon-infotip",
-            "codemirror-addon-lint-fix"
-        ],
+        "noErrorTruncation": true
     }
 }
